--- a/src/Components/Alumni/Alumni.css
+++ b/src/Components/Alumni/Alumni.css
@@ -8,6 +8,7 @@
     padding-top: 2vh;
     justify-content: center;
     row-gap: 5vh;
+    top: 11vh;
   
     h1{
         font-family: "Poppins", sans-serif;
