--- a/src/Components/Alumni/cardalumni.css
+++ b/src/Components/Alumni/cardalumni.css
@@ -154,7 +154,7 @@
       height: 20%;
     }
   }
-  button{
+  #alumni-button{
     height: 30px;
     background-color: #DA4D1D;
     border: none;
