--- a/src/Components/Tedx/HeaderImg/HeaderImg.css
+++ b/src/Components/Tedx/HeaderImg/HeaderImg.css
@@ -14,7 +14,7 @@
 .slide-image {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Ensures image covers the container */
+  object-fit: contain; /* Ensures image covers the container */
   position: absolute;
   top: 0;
   left: 0;
