--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,29 @@
-html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden; 
-  }
-  
- 
+
+
+
   .App {
     display: flex;
     flex-direction: column;
     width: 100%;
     min-height: 100vh;
   }
-  
- 
+
   .App > div {
     flex: 1;
     width: 100%;
   }
   
-
+ 
   .pt-12 {
     padding-top: 3rem; 
   }
   
-
+ 
   nav, footer {
     width: 100%;
 
   }
-  
-  
+
   nav {
     background-color: #333; 
     color: #fff; 
@@ -39,7 +31,7 @@ html, body {
   
   footer {
     background-color: #f1f1f1; 
-    color: #333; 
+    color: #333;
     padding: 1rem 0; 
     text-align: center;
   }
@@ -51,3 +43,10 @@ html, body {
     }
   }
   
+   html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: auto;
+    overflow-x: hidden; 
+  }
