--- a/src/Components/Team/Teams.css
+++ b/src/Components/Team/Teams.css
@@ -13,16 +13,16 @@ body {
 }
 
 .teams-heading {
-    /* font-size: 3rem; */
+    font-size: 3rem;
     margin-bottom: 2rem;
     animation: fadeIn 2s ease-in-out;
 }
 
 .sub-heading {
-    /* font-size: 2rem; */
+    font-size: 2rem;
     margin-bottom: 1rem;
     color: rgb(202, 52, 53);
-    animation: fadeIn 1.5s ease-in-out;
+    animation: fadeIn 2s ease-in-out;
 }
 
 .section-divider {
@@ -31,10 +31,10 @@ body {
     border: 1px solid rgb(202, 52, 53);
 }
 
-.teams-grid-container {
+.grid-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 2rem; /* Adjust this value to your preferred gap */
+    grid-gap: 2rem;
     margin: 0 2rem;
     padding: 2rem 4rem;
 }
@@ -43,59 +43,53 @@ body {
     perspective: 1000px;
 }
 
-.teams-card {
+.card {
     background-color: rgb(30, 32, 34);
     border-radius: 15px;
     overflow: hidden;
     position: relative;
     box-shadow: 0 4px 10px rgba(250, 0, 0, 0.4);
-    transform: translateY(0);
-    transition: transform 0.9s ease-in-out;
+    transition: transform 1.2s ease-in-out, box-shadow 1.2s ease-in-out;
     width: 100%;
-    max-width: 250px;
-    height: 250px;
+    max-width: 240px;
+    height: 240px;
     margin: 0 auto;
-    animation: scrollAnimation 0.3s ease-in-out;
     cursor: pointer;
     display: flex;
     flex-direction: column;
 }
 
-.teams-card:hover {
+.card:hover {
     transform: scale(1.05) rotateX(4deg) translateY(-7px);
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.7);
-    opacity: 1;
 }
 
-.teams-card-image {
+.card-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: bottom;
     flex-grow: 1;
 }
 
-.teams-card-content {
+.card-content {
     padding: 0.75rem;
     text-align: center;
     position: relative;
     flex-grow: 0;
 }
 
-.teams-card-name {
-    font-size: 0.875rem;
+.card-name {
+    font-size: 1rem;
     margin-bottom: 0.5rem;
     color: rgb(202, 52, 53);
-    animation: fadeInDown 1s ease-in-out;
 }
 
-.teams-card-designation {
-    font-size: 0.75rem;
+.card-designation {
+    font-size: 0.875rem;
     color: rgb(202, 52, 53);
-    animation: fadeInUp 1.2s ease-in-out;
 }
 
-.teams-card-overlay {
+.card-overlay {
     position: absolute;
     top: 0;
     left: 0;
@@ -108,29 +102,12 @@ body {
     justify-content: center;
     flex-direction: column;
     padding: 1.5rem;
-    transition: opacity 0.3s ease-in-out;
+    transition: opacity 0.5s ease-in-out;
     text-align: center;
 }
 
-.teams-card:hover .teams-card-overlay {
+.card:hover .card-overlay {
     opacity: 1;
-    animation: scrollAnimation 0.3s ease-in-out;
-}
-
-.teams-card-overlay h3,
-.teams-card-overlay p {
-    margin: 0;
-    color: white;
-    font-size: 1rem;
-}
-
-.teams-card-overlay p.position {
-    color: rgb(202, 52, 53);
-    transition: color 0.2s ease-in-out;
-}
-
-.teams-card:hover .teams-card-overlay p.position {
-    color: red;
 }
 
 .social-icons {
@@ -138,13 +115,12 @@ body {
     justify-content: center;
     gap: 1.5rem;
     margin-top: 1rem;
-    animation: fadeInUp 1.5s ease-in-out;
 }
 
 .social-icon {
     color: rgb(202, 52, 53);
-    font-size: 1.2rem;
-    transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
+    font-size: 1.5rem;
+    transition: transform 0.4s ease-in-out, color 0.4s ease-in-out;
 }
 
 .social-icon:hover {
@@ -155,200 +131,117 @@ body {
 @keyframes fadeIn {
     from {
         opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-@keyframes fadeInUp {
-    from {
-        transform: translateY(30px);
-        opacity: 0;
-    }
-    to {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
-
-@keyframes fadeInDown {
-    from {
-        transform: translateY(-30px);
-        opacity: 0;
-    }
-    to {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
-
-@keyframes animate-left {
-    from {
-        transform: translateX(-100%);
-        opacity: 0;
-    }
-    to {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-
-@keyframes animate-right {
-    from {
-        transform: translateX(100%);
-        opacity: 0;
-    }
-    to {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-
-@keyframes scrollAnimation {
-    from {
         transform: translateY(20px);
-        opacity: 0;
     }
+
     to {
-        transform: translateY(0);
         opacity: 1;
+        transform: translateY(0);
     }
 }
 
 .section {
     opacity: 0;
-    transition: opacity 1s ease-in-out;
+    visibility: hidden;
+    will-change: opacity, transform;
+    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out, transform 0.5s ease-in-out;
 }
 
-.section.animate-left {
-    animation: animate-left 1.5s ease-out forwards;
-}
-
-.section.animate-right {
-    animation: animate-right 1.5s ease-out forwards;
+.section.section-visible {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
 }
 
 @media (max-width: 1200px) {
-    .teams-grid-container {
-        grid-template-columns: repeat(4, 1fr);
-        gap: 1.5rem; /* Adjust as needed */
+    .grid-container {
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
 @media (max-width: 992px) {
-    .teams-grid-container {
-        grid-template-columns: repeat(3, 1fr);
-        gap: 1.5rem; /* Adjust as needed */
-    }
-
-    .teams-heading {
-        font-size: 2.5rem;
-    }
-
-    .sub-heading {
-        font-size: 1.75rem;
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media (max-width: 768px) {
-    .teams-grid-container {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 1.5rem; /* Adjust as needed */
-    }
-
     .teams-heading {
-        font-size: 2rem;
+        font-size: 2.5rem;
+        margin-top: 15px;
     }
 
     .sub-heading {
-        font-size: 1.5rem;
+        font-size: 2rem;
     }
 
-    .teams-card {
-        max-width: 200px;
-        height: 200px;
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+        padding: 1rem 2rem;
+    }
+
+    .card {
+        max-width: 220px;
+        height: 220px;
+    }
+
+    .social-icon {
+        font-size: 1.3rem;
     }
 }
 
 @media (max-width: 576px) {
-    .teams-grid-container {
-        grid-template-columns: 1fr;
-        gap: 2rem; /* Adjust as needed */
-    }
-
     .teams-heading {
-        font-size: 1.75rem;
+        font-size: 3.5rem;
+        margin-top: 5px;
     }
 
     .sub-heading {
-        font-size: 1.25rem;
+        font-size: 2.25rem;
     }
 
-    .teams-card {
-        max-width: 180px;
-        height: 180px;
+    .grid-container {
+        grid-template-columns: 1fr;
+        padding: 1rem;
+    }
+
+    .card {
+        max-width: 250px;
+        height: 250px;
+    }
+
+    .social-icon {
+        font-size: 1.2rem;
     }
 }
 
 @media (max-width: 400px) {
-    .teams-grid-container {
-        gap: 1.5rem; /* Adjust as needed */
-    }
-
     .teams-heading {
-        font-size: 1.75rem;
+        font-size: 3.25rem;
+        margin-top: 8px;
     }
 
     .sub-heading {
-        font-size: 1rem;
+        font-size: 2rem;
     }
 
-    .teams-card {
-        max-width: 150px;
-        height: 150px;
+    .card {
+        max-width: 220px;
+        height: 220px;
+    }
+
+    .card-name,
+    .card-designation {
+        font-size: 0.875rem;
     }
 }
 
 @media (max-width: 320px) {
-    .teams-grid-container {
-        gap: 1rem; /* Adjust as needed */
-    }
-
     .teams-heading {
-        font-size: 1.25rem;
+        font-size: 2.75rem;
     }
 
     .sub-heading {
-        font-size: 0.875rem;
-    }
-
-    .teams-card {
-        max-width: 130px;
-        height: 130px;
-    }
-}
-
-@media (max-width: 250px) {
-    .teams-grid-container {
-        gap: 0.75rem; /* Adjust as needed */
-    }
-
-    .teams-heading {
-        font-size: 1rem;
-    }
-
-    .sub-heading {
-        font-size: 0.75rem;
-    }
-
-    .teams-card {
-        max-width: 110px;
-        height: 110px;
-    }
-
-    .teams-card-name,
-    .teams-card-designation {
-        font-size: 0.5rem;
+        font-size: 1.5rem;
     }
 }
