--- a/src/Components/Home/HomePage.css
+++ b/src/Components/Home/HomePage.css
@@ -52,7 +52,7 @@
 .home-content {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 
@@ -922,7 +922,7 @@
   }
 
   .homabout-fist p {
-    margin: 110px;
+    margin:2px 110px;
     font-size: 1.6rem;
     line-height: 1.4;
 
@@ -987,7 +987,7 @@
   }
 
   .homabout-baja p {
-    margin: 110px;
+    margin: 2px 110px;
     font-size: 1.6rem;
     line-height: 1.4;
   }
@@ -1052,7 +1052,7 @@
   }
 
   .homabout-aiml p {
-    margin: 110px;
+    margin:2px 110px;
     font-size: 1.6rem;
     line-height: 1.4;
   }
