--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
@@ -95,7 +96,7 @@ html, body {
 }
 
 .footer-copy {
-    background: #151719;
+    background: rgb(15, 16, 18);
     color: #ffffff;
     text-align: center;
     padding: 20px 0;
@@ -115,15 +116,18 @@ html, body {
 .footer-copy-link:hover {
     text-decoration: underline;
 }
-.anchor{
+
+.anchor {
     color: white;
     text-decoration: none;
     font-family: 'Times New Roman', Times, serif;
-    
+
 }
-.anchor:hover{
+
+.anchor:hover {
     color: rgb(202, 52, 53);
 }
+
 @media (max-width: 768px) {
     .footer-col {
         max-width: 48%;
