--- a/src/Components/Aarohan/Aarohan.css
+++ b/src/Components/Aarohan/Aarohan.css
@@ -55,7 +55,7 @@ p {
 
 .arhn-card img {
   width: 100%;
-  object-fit: cover;
+  object-fit: center;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
 }
 
@@ -87,7 +87,7 @@ p {
 
 .arhn-card-description {
   margin: 20px 0 0;
-  font-size: 18px;
+  
   color: #777;
   line-height: 1.4;
 }
@@ -109,8 +109,8 @@ p {
 
 .arhn-slide-track {
   display: flex;
-  
-  animation: scroll 30s linear infinite;
+
+  animation: scroll 40s linear infinite;
 }
 
 .arhn-slider:hover .arhn-slide-track {
@@ -118,33 +118,34 @@ p {
 }
 
 @keyframes scroll {
-  0% {
-    transform: translateX(0);
+  from {
+    transform: translateX(0%);
   }
 
-  100% {
-    transform: translateX(calc(-100%));
+  to {
+    transform: translateX(-100%);
   }
 }
 
 .arhn-single-slide {
-
+  border-radius: 5%;
   display: flex;
   align-items: center;
   padding: 15px;
   perspective: 100px;
-  border-radius: 10px;
+  
 }
 
 .arhn-single-slide img{
   width: 100%;
   height: 150%;
   transition: transform 1s;
-  border-radius: 10px;
+  border-radius: 5%;
 }
 
-.arhn-single-slide img:hover {
+.arhn-single-slide:hover img:hover {
   transform: translateZ(10px);
+  border-radius: 5%;
 }
 
 .arhn-slider::before,
