--- a/src/Components/Aarohan/Aarohan.css
+++ b/src/Components/Aarohan/Aarohan.css
@@ -28,7 +28,7 @@ body {
 
 p {
   line-height: 27px;
-  font-family: poppin, sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #9ca9b3;
   letter-spacing: -0.1px;
 
